# DS_ML_AI_Template

./: .gitignore  README.md  docker-compose.yml  init_db.py  main.py  pyproject.toml
db/: connection.py  models.py
tests/: test_insert.py
